Unit tests migration from JUnit4 to JUnit5. Powermock removed.